pdf download and minor edits

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <span class="down">I am Ozge Ozkaya</span>
             </h1>
             <p class="header-subtitle">Data Scientist</p>
-            <button class="btn btn-primary">Visit My Works</button>
+            <button class="btn btn-primary"><a href="#portfolio" style="color: aliceblue;">Visit My Works</a></button>
         </div>
     </header><!-- end of page header -->
 
@@ -69,8 +69,10 @@
                     <p>
                         A dynamic Data Scientist specializing in NLP and ML, delivering impactful solutions for diverse fields. Possess hands-on experience building ML/NLP pipelines & captivating visualizations.
                         <br>Proven track record at UNDP developing web products with scraping, analysis, and visualization capabilities. Leveraged Power BI to create insightful dashboards, streamlining client workflows.
+ 
                     </p>
-                    <button class="btn-rounded btn btn-outline-primary mt-4">Download CV</button>
+                    <button class="btn-rounded btn btn-outline-primary mt-4" onclick="location.href='Ozge Ozkaya CV_july24.pdf';" download="Ozge Ozkaya CV_july24.pdf">Download CV</button>
+
                 </div>
             </div>
         </div>
@@ -307,11 +309,10 @@
         <div class="container text-center text-sm-left">
             <div class="row align-items-center">
                 <div class="col-sm offset-md-1 mb-4 mb-md-0">
-                    <h6 class="title text-light">Want to work with me?</h6>
-                    <p class="m-0 text-light">Always feel Free to Contact me</p>
+                    <h6 class="title text-light">Would like to meet?</h6>
                 </div>
                 <div class="col-sm offset-sm-2 offset-md-3">
-                    <button class="btn btn-lg my-font btn-light rounded">Hire Me</button>
+                    <button class="btn btn-lg my-font btn-light rounded">Contact me</button>
                 </div>
             </div>
         </div>
@@ -320,7 +321,6 @@
     <!-- blog section -->
     <section class="section" id="blog">
         <div class="container text-center">
-            <p class="section-subtitle">Recent Posts?</p>
             <h6 class="section-title mb-6">Blog</h6>
             <!-- blog-wrapper -->
             <div class="blog-card">
