--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                     <h6 class="title text-light">Would like to meet?</h6>
                 </div>
                 <div class="col-sm offset-sm-2 offset-md-3">
-                    <button class="btn btn-lg my-font btn-light rounded">Contact me</button>
+                    <a href="mailto:ozgeozzkaya@gmail.com"><button class="btn btn-lg my-font btn-light rounded">Contact me</button></a>
                 </div>
             </div>
         </div>
@@ -349,19 +349,7 @@
     </section><!-- end of blog section -->
 
     <!-- footer -->
-    <div class="container">
-        <footer class="footer">
-            <p class="mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="http://www.devcrud.com">DevCRUD</a></p>
-            <div class="social-links text-right m-auto ml-sm-auto">
-                <a href="javascript:void(0)" class="link"><i class="ti-facebook"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-twitter-alt"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-google"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-pinterest-alt"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-instagram"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-rss"></i></a>
-            </div>
-        </footer>
-    </div> <!-- end of page footer -->
+
 
     <!-- core  -->
     <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
